--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "embifi",
+  "homepage": "https://embifi.github.io/embifi_dev_Website_niyam",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +20,7 @@
     "bootstrap": "^5.1.3",
     "dompurify": "^2.3.10",
     "firebase": "^8.10.0",
+    "gh-pages": "^5.0.0",
     "hamburger-react": "^2.5.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -39,6 +41,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy" : "npm run build", 
+    "deploy": "gh-pages -d build", 
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
